--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="today">Сегодня</string>
     <string name="date">7 мая</string>
     <string name="habits">Привычки</string>
+    <string name="create_habit">Создайте привычку</string>
 </resources>
